--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Mystery and detective stories'
 - !lcsh 'Ranch life -- Juvenile fiction'
+- GITenberg
 title: The Boy from the Ranch; Or, Roy Bradner's City Experiences
 url: http://www.gutenberg.org/ebooks/21794
